improve error handling somewhat + add Class-Path scanning